Main page is typeseted

--- a/_app/pug/main/2-about.pug
+++ b/_app/pug/main/2-about.pug
@@ -2,14 +2,15 @@ section#about
 	.container
 		.row
 			.col-md-4.col-md-push-8
-				.about-title-set
+				.about-set
 					h3.about-set-title О методе
 					+imgs('about-set-img', 'img/images/about.png', 'Цветочки')
 			.col-md-8.col-md-pull-4
 				p.general-text
 					span Арт-терапия 
-					| — метод художественной терапии, основанный на слиянии творчества и терапевтической (или консультационной) практики, направленный на коррекцию эмоциональной, мотивационной, коммуникативной, регулятивной сфер, и способствующий развитию личности
-				p.general-text Арт-терапия развивает правое полушарие, интуицию и эмоциональный интеллект - поэтому, для многих это способ увеличить свою успешность и продуктивность
+					| — метод художественной терапии, основанный на слиянии творчества и терапевтической (или консультационной) практики, направленный на коррекцию эмоциональной, мотивационной, коммуникативной, регулятивной сфер, и способствующий развитию личности.
+					br
+					| Арт-терапия развивает правое полушарие, интуицию и эмоциональный интеллект - поэтому, для многих это способ увеличить свою успешность и продуктивность
 		.row
 			.col-md-12
 				p.general-text Арт-терапия - направление психологической коррекции, в основе которого используются искусство и творчество, а точнее - метафора. Метафору человек, выбравший арт-терапию, в процессе сессии создает сам. Все дело в том, что в нашем бессознательном информация содержится в виде символов, образов, метафор, которые имеют определенную эмоциональную наполненность. Для того чтобы решить ту или иную психологическую проблему этим методом, нам необходимо найти и создать такой образ, вывести его на осознанный уровень, проработать связанные с ним эмоции и получить "инсайт" - освобождение от негативных застарелых чувств
