--- a/_app/pug/main/3-can.pug
+++ b/_app/pug/main/3-can.pug
@@ -2,7 +2,7 @@ mixin ci(n, h4, p)
 	.col-md-6
 		.can-item(class='can-item-' + n)
 			if h4
-				h4.can-item=h4
+				h4.can-item-title=h4
 			p.can-item-text=p
 
 section#can
@@ -10,33 +10,34 @@ section#can
 		+gt('', 'На терапии вы сможете:')
 		.row
 			+ci('1', '', 'проработать волнующие вас запросы, страхи, ограничения')
-			+ci('2', 'Обучаемость:', 'Улучшится общая обучаемость. Ваше восприятие, способность к обучению и все когнитивные функции выйдут на новый уровень, что мгновенно скажется на ваших результатах')
-			+ci('3', 'Улучшение памяти:', 'Улучшается память настолько, что вы сможете вспомнить даже многие уже позабытые моменты из детства. Такой эффект расширения объёмов памяти связан с тем, что блоки бессознательного вскрываются, и информация, ранее заблокированная, становится доступной, отсюда и большое количество деталей, всплывающих из далёкого прошлого')
+			+ci('2', 'Творчество:', 'Высвобождается творческий потенциал. Множество психологических блоков будет снято, «ограничители» подсознательного выйдут наружу, и вы постепенно, практикуя йога-нидру регулярно, полностью от них освободитесь')
 		.row
-			+ci('4', 'Творчество:', 'Высвобождается творческий потенциал. Множество психологических блоков будет снято, «ограничители» подсознательного выйдут наружу, и вы постепенно, практикуя йога-нидру регулярно, полностью от них освободитесь')
-			+ci('5', 'Визуализация:', 'Способность визуализировать многократно повышается за счёт регулярной тренировки, совершаемой в процессе практики йога-нидры. А также если вы не умели визуализировать, то с помощью йога-нидры вы научитесь это делать')
+			+ci('3', 'Обучаемость:', 'Улучшится общая обучаемость. Ваше восприятие, способность к обучению и все когнитивные функции выйдут на новый уровень, что мгновенно скажется на ваших результатах')
+			+ci('4', 'Визуализация:', 'Способность визуализировать многократно повышается за счёт регулярной тренировки, совершаемой в процессе практики йога-нидры. А также если вы не умели визуализировать, то с помощью йога-нидры вы научитесь это делать')
+		.row
+			+ci('5', 'Улучшение памяти:', 'Улучшается память настолько, что вы сможете вспомнить даже многие уже позабытые моменты из детства. Такой эффект расширения объёмов памяти связан с тем, что блоки бессознательного вскрываются, и информация, ранее заблокированная, становится доступной, отсюда и большое количество деталей, всплывающих из далёкого прошлого')
 			+ci('6', 'Здоровье:', 'Повышается уровень стрессоустойчивости, в целом все системы организма начинают работать гармонично, так как в процессе практики йога-нидры с помощью глубокой релаксации будут устраняться все зажимы, что позволит вам в целом улучшить здоровье')
 		.can-acc
 			.can-acc-item
 				h4.can-acc-item-button Техники АРТ-терапии в работе с целеполаганием 
 				.can-acc-item-info
 					p.general-text Целью мероприятия является диагностика субъективного восприятия участником собственных стратегий целеполагания
-					h5.can-acc-item-info-title ЗАДАЧИ:
-					ul.general-item
+					h5.can-acc-item-info-title.can-acc-item-info-title-mt ЗАДАЧИ:
+					ul.general-list
 						li выявление имеющейся стратегии целеполагания;
 						li определение эмоционального фона, которым сопровождается продвижение цели;
 						li прояснение в сознании возможных вариантов оптимизации стратегии выбора цели и продвижения к ней с сохранением ресурса
-					h5.can-acc-item-info-title ЧТО ПОЛУЧАТ УЧАСТНИКИ В ИТОГЕ:
-					ul.general-item
+					h5.can-acc-item-info-title.can-acc-item-info-title-mt ЧТО ПОЛУЧАТ УЧАСТНИКИ В ИТОГЕ:
+					ul.general-list
 						li осознание деструктивных стратегий целеполагания
 						li замена неэффективных действий на более конструктивные и результативные
 						li увеличение мотивации и ресурса к действию
-					+b('', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=615&clean=true&lg=ru', 'Заказать', '_blank')
+					+b('button-can', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=615&clean=true&lg=ru', 'Заказать', '_blank')
 			.can-acc-item
 				h4.can-acc-item-button Техники АРТ-терапии в работе с семейными отношениями 
 				.can-acc-item-info
 					h5.can-acc-item-info-title ЗАДАЧИ:
-					ul.general-item
+					ul.general-list
 						li изучение прошлого и текущего опыта семьи
 						li осознание причинно-следственных связей в отношениях и реакциях членов семьи
 						li выявление и коррекция дисфункциональных вариантов семейного взаимодействия
@@ -45,14 +46,14 @@ section#can
 						li увидеть влияние родителей на детское восприятие мира
 						li изучение родительского влияния
 						li коррекция родительского поведения
-					h5.can-acc-item-info-title ЧТО ПОЛУЧАТ УЧАСТНИКИ В ИТОГЕ:
-					ul.general-item
+					h5.can-acc-item-info-title.can-acc-item-info-title-mt ЧТО ПОЛУЧАТ УЧАСТНИКИ В ИТОГЕ:
+					ul.general-list
 						li осознание дисфункциональных вариантов семейного взаимодействия
 						li отреагирование и принятие чувств
 						li получение нового опыта совместной деятельности и сопереживания
 						li освоение и реализации новых позиций и способов взаимодействия
 						li обучение адекватным и конструктивным способам выражения чувств и решения конфликтов
-					+b('', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=614&clean=true&lg=ru', 'Заказать', '_blank')
+					+b('button-can', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=614&clean=true&lg=ru', 'Заказать', '_blank')
 			.can-acc-item
 				h4.can-acc-item-button Арт-терапия в работе с трудными жизненными ситуациями 
 				.can-acc-item-info
@@ -60,30 +61,30 @@ section#can
 					p.general-text Практика направлена на помощь при работе с эмоциями, которые возникают во время стрессовых ситуаций.
 					p.general-text Обычно, это не очень приятные эмоции – раздражение, злость, гнев, обида… Наша задача – научиться точно распознать для себя, что же мы чувствуем, принять данную эмоцию и…трансформировать ее в нечто светлое, более приятное и приемлемое для себя в текущий момент
 					p.general-text Практика поможет снизить интенсивность негативного эмоционального переживания в эмоциональном поле личности, которое сформировалось в трудной для ситуации. Трансформация и отражение чувств на бумаге создаст в Вашем душевном пространстве как бы «внутреннее разрешение» на изменение этого самого тяжёлого чувства. Процесс арт-терапевтической работы позволит получить глубинное состояние лёгкости, ослабление давних зажимов, создаст восприятие себя как «раскрепощённого и освобождённого» человека
-					h5.can-acc-item-info-title ПРАКТИКА ПОЗВОЛИТ:
-					ul.general-item
+					h5.can-acc-item-info-title.can-acc-item-info-title-mt ПРАКТИКА ПОЗВОЛИТ:
+					ul.general-list
 						li разделить человека с его негативными эмоциями
 						li развить навык контроля и управления своими чувствами
 						li Даст социально приемлемый выход негативным чувствам
 						li Преодолеть внутренние блоки и конфликты
 						li Соединить мысли и чувства, понять смысл травмирующего события
 						li Получите поддержку других участников терапии, новые знакомства и полезное времяпрепровождение
-					+b('', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=613&clean=true&lg=ru', 'Заказать', '_blank')
+					+b('button-can', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=613&clean=true&lg=ru', 'Заказать', '_blank')
 			.can-acc-item
 				h4.can-acc-item-button Арт-терапия в работе с самооценкой 
 				.can-acc-item-info
 					h5.can-acc-item-info-title ЦЕЛИ И ЗАДАЧИ ЗАНЯТИЯ:
 					p.general-text Познавать себя через призму ассоциаций — удивительный и увлекательный процесс. Через практики этого занятия очень деликатно и бережно открываются человеческому взору не только глубинные психосоматические стороны нашего самовосприятия, но и открывается возможность исследовать внутреннее звучание человека. Необыкновенным образом в звуках и метафорах начинают звучать камертоны нашего физического тела, наших эмоций, идей, нашего духовного состояния
 					p.general-text Арт-терапия — универсальный способ повышения самооценки. Это пробуждает в человеке заложенную от рождения способность быть творцом: проявлять себя вовне, упорядочивать окружающий мир, созидать, изобретать нечто новое и уникальное. Взаимодействие с цветом и тактильными свойствами изобразительных материалов также способствует снятию стресса и усилению адаптивных качеств личности 
-					h5.can-acc-item-info-title ЧТО ПОЛУЧАТ УЧАСТНИКИ В ИТОГЕ:
-					ul.general-item
+					h5.can-acc-item-info-title.can-acc-item-info-title-mt ЧТО ПОЛУЧАТ УЧАСТНИКИ В ИТОГЕ:
+					ul.general-list
 						li Познакомитесь с методом ресурсной арт-терапии и его возможностями
 						li Сможете посмотреть на себя со стороны, исследовать свою самооценку
 						li Узнаете много нового о своем теле и его связи с внешним миром
 						li Сможете наладить и укрепить контакт с собой
 						li Развитие образного-метафорического мышления и креативности
 						li Получите поддержку других участников терапии, новые знакомства и полезное времяпрепровождение
-					+b('', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=612&clean=true&lg=ru', 'Заказать', '_blank')
+					+b('button-can', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=612&clean=true&lg=ru', 'Заказать', '_blank')
 			.can-acc-item
 				h4.can-acc-item-button Арт-терапия в работе с негативными эмоциями 
 				.can-acc-item-info
@@ -91,62 +92,62 @@ section#can
 					p.general-text Практика направлена на помощь при работе с эмоциями, которые возникают во время стрессовых ситуаций.
 					p.general-text Обычно, это не очень приятные эмоции – раздражение, злость, гнев, обида… Наша задача – научиться точно распознать для себя, что же мы чувствуем, принять данную эмоцию и…трансформировать ее в нечто светлое, более приятное и приемлемое для себя в текущий момент
 					p.general-text Практика поможет снизить интенсивность негативного эмоционального переживания в эмоциональном поле личности, которое сформировалось в прошлом клиента и имеет длительную историю. Трансформация и отражение чувств на бумаге создаст в Вашем душевном пространстве как бы «внутреннее разрешение» на изменение этого самого тяжёлого чувства. Процесс арт-терапевтической работы позволит получить глубинное состояние лёгкости, ослабление давних зажимов, создаст восприятие себя как «раскрепощённого и освобождённого» человека
-					h5.can-acc-item-info-title ПРАКТИКА ПОЗВОЛИТ:
-					ul.general-item
+					h5.can-acc-item-info-title.can-acc-item-info-title-mt ПРАКТИКА ПОЗВОЛИТ:
+					ul.general-list
 						li Проработать подавленные мысли и чувства
 						li Даст социально приемлемый выход негативным чувствам
 						li Преодолеть внутренние блоки и конфликты
 						li Соединить мысли и чувства, понять смысл травмирующего события
 						li Получите поддержку других участников терапии, новые знакомства и полезное времяпрепровождение
-					+b('', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=611&clean=true&lg=ru', 'Заказать', '_blank')
+					+b('button-can', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=611&clean=true&lg=ru', 'Заказать', '_blank')
 			.can-acc-item
 				h4.can-acc-item-button Техники АРТ-терапии в работе с целеполаганием и страхами 
 				.can-acc-item-info
-					ul.general-item
+					ul.general-list
 						li осознание возможных страхов на пути к цели и возможностей их преодоления
 						li работа с возможным самосаботажем, ленью и сопротивлением на пути к цели
-					h5.can-acc-item-info-title ЧТО ПОЛУЧАТ УЧАСТНИКИ В ИТОГЕ:
-					ul.general-item
+					h5.can-acc-item-info-title.can-acc-item-info-title-mt ЧТО ПОЛУЧАТ УЧАСТНИКИ В ИТОГЕ:
+					ul.general-list
 						li техника помогает осознать, на каком этапе движения какие личностные качества и состояния могут быть максимально полезными, проявляет актуальные сильные стороны личности
 						li замена неэффективных действий на более конструктивные и результативные
 						li увеличение мотивации и ресурса к действию
 						li техника дает возможность выяснить актуальность цели, увидеть ценности, новые возможности и перспективы, которые появляются с достижением цели
-					+b('', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=596&clean=true&lg=ru', 'Заказать', '_blank')
+					+b('button-can', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=596&clean=true&lg=ru', 'Заказать', '_blank')
 			.can-acc-item
 				h4.can-acc-item-button Ресурсные техники Арт-терапии 
 				.can-acc-item-info
 					p.general-text Техника является одновременно и диагностической и ресурсной, каждый сможет открыть для себя что-то важное в процессе работы. Рисование мандалы - универсальная арт-терапевтическая практика. Можно её использовать для контейнирования и проявления чувств, для самоанализа, для работы с состояниями или упорядочиванием мыслей, для интегрирования нового опыта
-					h5.can-acc-item-info-title ЧТО ПОЛУЧАТ УЧАСТНИКИ В ИТОГЕ:
-					ul.general-item
+					h5.can-acc-item-info-title.can-acc-item-info-title-mt ЧТО ПОЛУЧАТ УЧАСТНИКИ В ИТОГЕ:
+					ul.general-list
 						li Разбор рисунков с моей помощью по диагностическим критериям
 						li Рисование мандалы позволяет расслабиться, погрузиться в своё детское состояние, кайфануть от процесса рисования и выбора цветов. Это ресурсная часть
 						li Эта практика позволяет безопасно проявить свои глубинные процессы и символически их контейнировать в закрытом пространстве круга. Выгрузить лишнее напряжение, признать его и отпустить. Это высвобождающая и поддерживающая часть
 						li Рисунок можно структурировать определённым узором или чередованием цветов - это помогает собраться с мыслями, если в голове бушует хаос
 						li Во время рисования приходят различные мысли, которые я рекомендую после рисования прописывать в формате фрирайтинга. Это углубляет внутреннюю работу и помогает переосмыслять свои процессы
 						li Мандалу можно преобразовывать. Как любое арт-терапевтическое творение, после работы с сильными переживаниями по желанию работу можно видоизменить, трансформировать, украсить. Когда высвобождение от чувства произошло может появится ощущение изменения и желание это выразить на рисунке, чтобы усилить эффект. Например, на месте выраженного гнева, изобразить цветы, символизируя конечность одного состояния и переход в другое
-					+b('', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=597&clean=true&lg=ru', 'Заказать', '_blank')
+					+b('button-can', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=597&clean=true&lg=ru', 'Заказать', '_blank')
 			.can-acc-item
 				h4.can-acc-item-button Арт-терапия в работе с обидами 
 				.can-acc-item-info
 					p.general-text Обида, как градусник: она не лечит болезнь, но показывает температуру. Проблему обида не решает! Она показывает - где именно проблема! Моя задача - помочь выплеснуть обиду и сопутствующие ей эмоции, чтобы вы смогли жить сегодняшним днем
-					h5.can-acc-item-info-title ЧТО ПОЛУЧАТ УЧАСТНИКИ В ИТОГЕ:
-					ul.general-item
+					h5.can-acc-item-info-title.can-acc-item-info-title-mt ЧТО ПОЛУЧАТ УЧАСТНИКИ В ИТОГЕ:
+					ul.general-list
 						li Освобождение от груза прошлого в отношении обиды
 						li Трансформация негативных переживаний в нейтральные
 						li Отслеживание и осознание ограничений, удерживающих чувство обиды
 						li Изменение отношения к ситуации, запустившей негативное чувство
 						li Заряд творческой энергии и наполнение ресурсным состояние
 						li Поддержка других участников терапии, новые знакомства и полезное времяпрепровождение
-					+b('', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=598&clean=true&lg=ru', 'Заказать', '_blank')
+					+b('button-can', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=598&clean=true&lg=ru', 'Заказать', '_blank')
 			.can-acc-item
 				h4.can-acc-item-button Арт-терапия в работе со страхом критики 
 				.can-acc-item-info
 					p.general-text Проработка страха критики, поиск внутренних ресурсов для создания уверенности в себе 
-					h5.can-acc-item-info-title ЧТО ПОЛУЧАТ УЧАСТНИКИ В ИТОГЕ:
-					ul.general-item
+					h5.can-acc-item-info-title.can-acc-item-info-title-mt ЧТО ПОЛУЧАТ УЧАСТНИКИ В ИТОГЕ:
+					ul.general-list
 						li обучение навыку коммуникации, умению вести диалог
 						li формирование навыка беспристрастного отношения к себе и ситуации
 						li развитие эмоционального интеллекта
 						li умение находить ресурсы и положительные моменты в стрессовых ситуациях
 						li работа с ограничивающими убеждениями
-					+b('', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=599&clean=true&lg=ru', 'Заказать', '_blank')
+					+b('button-can', 'https://shop.mv-centr.ru/?r=ordering/cart/as1&id=599&clean=true&lg=ru', 'Заказать', '_blank')
