--- a/_app/pug/main/4-line.pug
+++ b/_app/pug/main/4-line.pug
@@ -1,7 +1,8 @@
 section#grey-line
 	.container
 		+imgs('grey-line-img', 'img/images/grey-line.png', 'Цветы')
-		p.grey-line-text В процессе работы вы усвоите новые для себя позитивные алгоритмы решения жизненных задач и таким образом повысите уровень своей психологической культуры в целом.
-		p.grey-line-text Арт-терапия часто дает двойной эффект. Первый - в виде найденного решения поставленной задачи. Второй - в виде общего повышения качества жизни клиента, повышения уровня мотивации, его достижений в каких-либо областях.
-		p.grey-line-text Арт-терапия – это эффективное направление в психотерапии и психологии, которое основано на искусстве и творчестве.
-		p.grey-line-text Арт-терапия работает со следующими запросами: работа со страхами, ограничивающими убеждениями, самооценкой, проблемы в отношениях, прояснение истинных желаний и поиск наиболее успешных способов достижения целей, психологическая разгрузка в кризисных ситуациях, проработка негативных эмоций, самоопределение
+		.content
+			p.grey-line-text В процессе работы вы усвоите новые для себя позитивные алгоритмы решения жизненных задач и таким образом повысите уровень своей психологической культуры в целом.
+			p.grey-line-text Арт-терапия часто дает двойной эффект. Первый - в виде найденного решения поставленной задачи. Второй - в виде общего повышения качества жизни клиента, повышения уровня мотивации, его достижений в каких-либо областях.
+			p.grey-line-text Арт-терапия – это эффективное направление в психотерапии и психологии, которое основано на искусстве и творчестве.
+			p.grey-line-text Арт-терапия работает со следующими запросами: работа со страхами, ограничивающими убеждениями, самооценкой, проблемы в отношениях, прояснение истинных желаний и поиск наиболее успешных способов достижения целей, психологическая разгрузка в кризисных ситуациях, проработка негативных эмоций, самоопределение
