--- a/_app/pug/main/6-tasks.pug
+++ b/_app/pug/main/6-tasks.pug
@@ -8,9 +8,10 @@ section#tasks
 		+gt('', 'Быстро, эффективно и увлекательно решаем задачи:')
 		.row
 			+ti('1', 'Освобождение от груза прошлого и выявление того, что мешает двигаться/получать/создавать')
-			+ti('2', 'Отслеживание и осознание ограничений, неработающих установок')
-			+ti('3', 'Избавление от страхов, проработка травм прошлого')
+			+ti('2', 'Обретение ресурса для дальнейшего развития')
 		.row
-			+ti('4', 'Обретение ресурса для дальнейшего развития')
-			+ti('5', 'Принятие себя, повышение самооценки и раскрытие творческого потенциала')
+			+ti('3', 'Отслеживание и осознание ограничений, неработающих установок')
+			+ti('4', 'Принятие себя, повышение самооценки и раскрытие творческого потенциала')
+		.row
+			+ti('5', 'Избавление от страхов, проработка травм прошлого')
 			+ti('6', 'Исследование чувств и эмоций: любовь, страх, ненависть, обида, злость, радость')
