--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -8,7 +8,7 @@ body
 	font-weight: normal
 	color #000
 	background-color #fff
-	line-height: 26px
+	line-height: 1.56
 	@media screen and (max-width 560px)
 		font-size: 17px
 		line-height: 23px
@@ -88,15 +88,32 @@ footer
 	text-align center
 	margin 0 auto
 	text-decoration none
-	color: #FEE7E6
+	color: #fff
+	text-transform uppercase
 	width: auto
-	font-family: PH
-	font-weight: normal
-	background-color: #48817B;
-	border-radius: 5px;
-	padding 17px 74px
+	min-width 200px
+	background-color: #e009ce
+	border-radius: 30px;
+	padding 17px 25px
+	font-size: 14px
+	font-weight: bold
 	transition: all .3s ease
 	&:focus
 		text-decoration none
+		color #fff
 	&:hover
 		text-decoration none
+		color #fff
+.general-text
+	font-size: 20px
+	margin-bottom: 10px
+	span
+		font-weight: bold
+.general-title
+	text-align center
+	font-family: PH
+	font-size: 42px
+	margin-bottom: 40px
+.general-list
+	margin-left: 20px
+	font-size: 20px
