Main page is adapted

--- a/_app/index.pug
+++ b/_app/index.pug
@@ -48,5 +48,5 @@ html(lang="ru")
 			include pug/main/9-last
 		include pug/base/2-footer
 		include pug/base/3-scripts
-		//- include pug/scripts/chat
+		include pug/scripts/chat
 		include pug/scripts/body_bottom_scripts
