--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -10,8 +10,8 @@ body
 	background-color #fff
 	line-height: 1.56
 	@media screen and (max-width 560px)
-		font-size: 17px
-		line-height: 23px
+		font-size: 18px
+		line-height: 1.3
 .container
 	width 1230px
 	// padding 0
@@ -109,11 +109,19 @@ footer
 	margin-bottom: 10px
 	span
 		font-weight: bold
+	@media screen and (max-width 560px)
+		font-size: 18px
 .general-title
 	text-align center
 	font-family: PH
 	font-size: 42px
 	margin-bottom: 40px
+	@media screen and (max-width 560px)
+		font-size: 32px
+		margin-bottom: 30px
 .general-list
 	margin-left: 20px
 	font-size: 20px
+	@media screen and (max-width 560px)
+		margin-left: 10px
+		font-size: 18px
