--- a/_app/styl/base/4-footer.styl
+++ b/_app/styl/base/4-footer.styl
@@ -2,6 +2,11 @@ footer
 	padding 20px 0
 	background-color: rgba(#eee,.7)
 	font-size: 16px
+	@media screen and (max-width 991px)
+		text-align center
+	@media screen and (max-width 560px)
+		padding 15px 0
+		font-size: 12px
 .footer-text
 	a
 		color #e460bf
