--- a/_app/styl/main/3-can.styl
+++ b/_app/styl/main/3-can.styl
@@ -1,5 +1,9 @@
 #can
 	padding 80px 0
+	@media screen and (max-width 991px)
+		padding 60px 0
+	@media screen and (max-width 560px)
+		padding 40px 0
 .can-item
 	width 100%
 	max-width 560px
@@ -9,6 +13,14 @@
 	background-position: top 10px left
 	background-size: 120px
 	min-height 180px
+	@media screen and (max-width 991px)
+		min-height 105px
+	@media screen and (max-width 560px)
+		min-height 1px
+		background-position: top center
+		padding 100px 0 0
+		background-size: auto 80px
+		text-align center
 	&-1
 		background-image: url(../img/icons/can-1.png)
 	&-2
@@ -29,6 +41,11 @@
 .can-acc-item
 	width 100%
 	max-width 900px
+	margin-left: 22px
+	@media screen and (max-width 991px)
+		max-width 94%
+	@media screen and (max-width 560px)
+		margin-bottom: 10px
 	&-button
 		border-top: 2px solid #bfbfbf
 		border-bottom: 1px solid #bfbfbf
@@ -38,6 +55,11 @@
 		font-weight: bold
 		cursor pointer
 		margin-bottom: 2px
+		@media screen and (max-width 560px)
+			min-height: 50px
+		@media screen and (max-width 386px)
+			font-size: 18px
+			padding 5px 10px 5px 30px
 		&:before
 			content: '+'
 			display block
@@ -53,14 +75,24 @@
 			top 1px
 			left -22px
 			text-align center
+			transition: all .3s ease
+		&.caib-active
+			&:before
+				transform: rotate(-45deg)
 	&-info
 		display none
 		padding 20px 0 40px
+		@media screen and (max-width 560px)
+			padding 15px 0 30px
 		&-title
 			font-size: 20px
 			font-weight: bold
 			margin 0 0 20px
 			&-mt
 				margin-top: 40px
+			@media screen and (max-width 560px)
+				font-size: 18px
+				&-mt
+					margin-top: 30px
 .button-can
 	margin-top: 30px
