--- a/_app/styl/main/5-get.styl
+++ b/_app/styl/main/5-get.styl
@@ -1,11 +1,18 @@
 #get
 	padding 80px 0 50px
+	@media screen and (max-width 991px)
+		padding 60px 0 30px
+	@media screen and (max-width 560px)
+		padding 40px 0 20px
 .get-item
 	width 100%
 	max-width 560px
 	margin 0 auto 50px
 	padding-left: 50px
 	position relative
+	@media screen and (max-width 560px)
+		margin-bottom: 30px
+		padding-left: 40px
 	&:before
 		content: ''
 		display block
@@ -31,3 +38,7 @@
 		font-family: PH
 		font-size: 22px
 		text-transform uppercase
+		@media screen and (max-width 560px)
+			font-size:20px
+		@media screen and (max-width 386px)
+			font-size: 18px
