--- a/_app/styl/main/7-author.styl
+++ b/_app/styl/main/7-author.styl
@@ -1,5 +1,9 @@
 #author
 	padding 80px 0
+	@media screen and (max-width 991px)
+		padding 60px 0
+	@media screen and (max-width 560px)
+		padding 40px 0
 .author-img
 	display block
 	width 100%
@@ -11,9 +15,15 @@
 	font-size: 24px
 	font-weight: bold
 	margin 100px 0 30px
+	@media screen and (max-width 991px)
+		margin 40px 0 30px
 .insta
 	display inline-block
 	margin-top: 80px
 	transition: all .3s ease
+	@media screen and (max-width 991px)
+		margin-top: 40px
+		@media screen and (max-width 560px)
+			margin-top: 25px
 	&:hover
 		transform: translateY(-4px)
